Updated scripts for each OS and simplified excercizes for lab1 and lab2